fixed footer spacing and favicon problems

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -193,13 +193,15 @@ footer {
 }
 
 @media (min-width: 50em) {
-    footer {
+    .footer {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        flex-direction: row;
+        width: 70%;
+        margin: 0 auto;
     }
 
-    footer p {
-        
+    .footer p {
         vertical-align: center;
     }
 }
